# svgerry

./: .gitignore  README.md  send_req.sh  svgerry.cabal
app/: Main.hs
src/: Shapes.hs
src/Shapes/: .#Render.hs  Colours.hs  Interpret.hs  Lang.hs  Render.hs
static/: index.html
