name:                svgerry
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/shawa/svgerry#readme
license:             GPL-3
license-file:        LICENSE
author:              andrew shaw
maintainer:          shawa1@tcd.ie
copyright:           andrew shaw
category:            academic exercise
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Shapes.Lang, Shapes.Interpret, Shapes.Colours
  build-depends:       base >= 4.7 && < 5
                     , blaze-svg
                     , matrix
                     , aeson
  default-language:    Haskell2010

executable svgerry-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , svgerry
                     , scotty
                     , blaze-html
                     , blaze-svg
                     , text
  default-language:    Haskell2010

test-suite svgerry-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , svgerry
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shawa/svgerry
